k8s/manifests/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: golang-todo-app
  labels:
    app: golang-todo-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: golang-todo-app
  type: NodePort
